[project]
name = "invokit-mcp"
version = "0.1.0"
description = "MCP server for the invok.it AI agent tool marketplace"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
invokit-mcp = "invokit_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invokit_mcp"]
