[project]
name = "invokit-mcp"
version = "0.1.0"
description = "Official MCP server for invok.it — the API marketplace for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "invok.it", email = "support@invok.it"}]
keywords = ["mcp", "ai-tools", "marketplace", "invok-it", "agent-tools", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://invok.it"
Repository = "https://github.com/invok-it/invokit-mcp"
Documentation = "https://docs.invok.it"

[project.scripts]
invokit-mcp = "invokit_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invokit_mcp"]
